# tup25-p4

./: alumnos.md  bajar_fotos.ipynb  control_p2.md  convertir.ipynb  lista_pr.txt  pyproject.toml  reloj.html
tp/61120 - Guerrero, Ana Sofía/tp2/: ejercicio.css  ejercicio.html  ejercicio.js
tp/61120 - Guerrero, Ana Sofía/tp3/alumnos-dir/: index.html  package-lock.json  package.json
tp/61120 - Guerrero, Ana Sofía/tp4/: ejercicio.py
tp/61120 - Guerrero, Ana Sofía/tp5/: ejercicio.py
tp/61136 - Sosa, Oscar Ignacio/tp4/: ejercicio.py
tp/61136 - Sosa, Oscar Ignacio/tp5/: ejercicio.py
tp/61579 - Gonzalo, Martín/tp6/backend/: main.py
tp/61579 - Gonzalo, Martín/tp6/frontend/app/: page.tsx
tp/61579 - Gonzalo, Martín/tp6/frontend/app/mis-compras/: page.tsx
tp/61579 - Gonzalo, Martín/tp6/frontend/app/productos/: page.tsx
tp/61993 - Medina, Juan Ignacio/tp6/: package-lock.json  package.json
tp/61993 - Medina, Juan Ignacio/tp6/backend/: crud.py  init_db_clean.py  initial_data.py  reset_db.py
tp/61993 - Medina, Juan Ignacio/tp6/backend/app/: auth.py  cargar_productos.py  database.py  main.py  models.py  requeriements.txt  schemas.py  utils.py
tp/61993 - Medina, Juan Ignacio/tp6/backend/app/data/: productos.json
tp/61993 - Medina, Juan Ignacio/tp6/backend/app/routers/: auth.py  carrito.py  compras.py  productos.py
tp/61993 - Medina, Juan Ignacio/tp6/frontend/: package-lock.json  package.json
tp/61993 - Medina, Juan Ignacio/tp6/frontend/src/app/: globals.css  (+2 more)
tp/62093 - Frías Silva, Juan Segundo/tp4/: ejercicio.py
tp6/frontend/: package-lock.json
(+22 files in other folders)
